# CipherTest

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  LINUX_APP_INTEGRATION.md  PROJECT_SUMMARY.md
extensions/: DEVELOPMENT.md  README.md
extensions/chrome/: background.js  content.js  manifest.json  popup.js
extensions/firefox/: background.js  content.js  manifest.json  popup.html  popup.js
extensions/firefox/icons/: README.md
extensions/native-host/: CMakeLists.txt  README.md  com.ciphermesh.native.json.in  ipc_client.cpp  ipc_client.hpp  main.cpp  message_handler.cpp  message_handler.hpp
extensions/vault-service/: CMakeLists.txt  README.md  ciphermesh-vault-service-wrapper.sh.in  com.ciphermesh.vault.json.in  main.cpp  vault_service.cpp  vault_service.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  crypto.cpp  crypto.hpp  database.cpp  database.hpp  vault.cpp  vault.hpp  vault_entry.hpp
src/desktop/: CMakeLists.txt  breach_checker.cpp  breach_checker.hpp  changepassworddialog.cpp  changepassworddialog.hpp  locationeditdialog.cpp  locationeditdialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  newentrydialog.cpp  newentrydialog.hpp  newgroupdialog.cpp  newgroupdialog.hpp  passwordgeneratordialog.cpp  passwordgeneratordialog.hpp  passwordhistorydialog.cpp  passwordhistorydialog.hpp  passwordstrength.hpp  settingsdialog.cpp  settingsdialog.hpp  sharegroupdialog.cpp  sharegroupdialog.hpp  themes.hpp  toast.cpp  toast.hpp  unlockdialog.cpp  unlockdialog.hpp
src/ipc/: CMakeLists.txt  ipc_server.cpp  ipc_server.hpp
src/p2p/: CMakeLists.txt  ip2pservice.cpp  ip2pservice.hpp
src/p2p_webrtc/: CMakeLists.txt  webrtcservice.cpp  webrtcservice.hpp
src/utils/: CMakeLists.txt  passwordstrength.cpp  passwordstrength.hpp  totp.cpp  totp.hpp
